# IDX_Trecker_Wahyu

./: .gitattributes  .gitignore  PROGRESS-riset-sumber-data.md  PROGRESS-v2.md  README.md  markup-radar-spec-1.md  markup-radar-spec-2.md  pyproject.toml  requirements.txt  run_eod.ps1  run_eod.sh  run_live.ps1  run_live.sh  run_screen.sh
.github/workflows/: ci.yml  daily.yml  test-sheets.yml  test-telegram.yml
config/: .env.example  settings.yaml
scripts/: backtest.py  demo.py  live_watch.py  run_daily.py  screen_universe.py  test_sheets.py  test_telegram.py  tune_f8.py  verify_data.py
src/markup_radar/: __init__.py  config.py  demo.py
src/markup_radar/alert/: __init__.py  telegram.py
src/markup_radar/backtest/: __init__.py  dataset.py  engine.py  metrics.py
src/markup_radar/ingest/: __init__.py  _history.py  broker_client.py  client.py  done_client.py  foreign_client.py  ihsg_client.py  ohlc_client.py
src/markup_radar/narrative/: __init__.py  claude.py
src/markup_radar/scoring/: __init__.py  classifier.py  score.py
src/markup_radar/signals/: __init__.py  broker_flow.py  done_ratio.py  levels.py  market.py  price_volume.py
src/markup_radar/store/: __init__.py  cache.py  db.py  sheets.py
tests/: test_alert.py  test_backtest.py  test_cache.py  test_classifier.py  test_config.py  test_demo.py  test_ingest.py  test_levels.py  test_run_daily.py  test_sheets.py  test_signals.py
